--- a/RESTful Routes/REST Table.html
+++ b/RESTful Routes/REST Table.html
@@ -22,6 +22,7 @@
         <th>Path</th>
         <th>HTTP Verb</th>
         <th>Purpose</th>
+        <th>Mongoose Method</th>
       </tr>
     </thead>
     <tbody>
@@ -30,42 +31,49 @@
       <td>/dogs</td>
       <td>GET</td>
       <td>List all dogs</td>
+      <td>Dog.find()</td>
      </tr>
      <tr class="primary"> 
       <td>New</td>
       <td>/dogs/new</td>
       <td>GET</td>
       <td>Show new dog</td>
+      <td>N/A</td>
      </tr>
      <tr class="primary"> 
       <td>Create</td>
       <td>/dogs</td>
       <td>POST</td>
       <td>Create new dog, then redirect somewhere</td>
+      <td>Dog.create()</td>
      </tr>
      <tr class="info"> 
       <td>Show</td>
       <td>/dogs/:id</td>
       <td>GET</td>
       <td>Show info about one specific dog</td>
+      <td>Dog.findById()</td>
      </tr>
      <tr class="warning"> 
       <td>Edit</td>
       <td>/dogs/:id/edit</td>
       <td>Get</td>
       <td>Show edit form for one dog</td>
+      <td>Dog.findById()</td>
      </tr>
      <tr class="warning"> 
       <td>Update</td>
       <td>/dogs/:id</td>
       <td>PUT</td>
       <td>Update a particular dog, then redirect somewhere</td>
+      <td>Dog.findByIdAndUpdate()</td>
      </tr>
      <tr class="danger"> 
       <td>Destroy</td>
       <td>/dog/:id</td>
       <td>DELETE</td>
       <td>Delete a particular dog, then redirect somewhere</td>
+      <td>Dog.findByIdAndRemove()</td>
      </tr>
     </tbody>
   </table>
